Support RFC4235 in PJSIP driver for BLF lights

The old CHAN_SIP driver supports RFC4235 for BLF lights to work.
But PJSIP driver doesn't support RFC4235 for BLF lights.
This is a big problem, see the asterisk jira bug tracker...
https://issues.asterisk.org/jira/browse/ASTERISK-24601

With this patch, this issue is fixed.
For more details see forum post:
http://forums.digium.com/viewtopic.php?f=1&t=94062